--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
     defaultConfig {
+        applicationId "com.inksplat.kinghorn"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
