--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,8 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.inksplat.kinghorn"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
